aadd tela de posts mockaad

--- a/app/(pages)/profile/profile.module.scss
+++ b/app/(pages)/profile/profile.module.scss
@@ -24,7 +24,7 @@
 }
 
 .profile_info {
-  margin-top: 60pt;
+  margin-top: 20pt;
   display: flex;
   flex-direction: column;
 
@@ -40,7 +40,7 @@
   font-weight: bold;
 }
 
-.user_friends {
+.user_info {
   font-size: 12pt;
   font-weight: 600;
   margin-top: 10pt;
