--- a/app/globals.scss
+++ b/app/globals.scss
@@ -3,9 +3,12 @@
 :root {
   --color-background: whitesmoke;
   --color-foreground: rgb(25, 25, 25);
+
+  --color-black: rgb(60, 60, 60);
   --color-app: rgb(114, 34, 175);
   --color-gray: rgb(236, 236, 236);
-  --color-blue: rgb(44, 37, 107);
+  --color-blue: rgb(38, 101, 197);
+  --color-red: rgb(172, 20, 51);
 
   --font-family: "Roboto Mono", serif;
   --font-optical-sizing: auto;
